# ros-visual-tracking-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
launch/: realsense_object_tracker.launch  test.launch
scripts/: cv_test.py  display_image.py  hsv_tracker_node.py  object_tracker_node.py  realsense_object_tracker.py
src/ros_visual_tracking_system/: __init__.py
src/ros_visual_tracking_system/config/: apriltag_settings.yaml  hsv_tracker_params.yaml
src/ros_visual_tracking_system/docs/: USER_GUIDE.md
src/ros_visual_tracking_system/launch/: apriltag.launch  apriltag_tracker.launch  combined_tracker.launch  hsv_tracker.launch
src/ros_visual_tracking_system/nodes/: __init__.py  apriltag_tracker_node.py  hsv_tracker_node.py
src/ros_visual_tracking_system/scripts/: cv_test.py  display_image.py  hsv_tracker_node.py
src/ros_visual_tracking_system/utils/: __init__.py  tracking_utils.py  visualization.py
