<?xml version="1.0"?>
<package format="2">
  <name>ros_visual_tracking_system</name>
  <version>1.0.0</version>
  <description>A professional ROS package for real-time visual object tracking using computer vision with support for HSV color-based tracking and AprilTag detection. Integrates with RealSense cameras for depth-aware object positioning.</description>

  <maintainer email="maintainer@example.com">Object Tracker Maintainer</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/yourusername/ros-visual-tracking-system</url>
  <url type="bugtracker">https://github.com/yourusername/ros-visual-tracking-system/issues</url>
  <url type="repository">https://github.com/yourusername/ros-visual-tracking-system.git</url>

  <author email="author@example.com">Object Tracker Developer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>apriltag_ros</build_depend>
  
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
    <rosdoc config="$(find ros_visual_tracking_system)/rosdoc.yaml"/>
  </export>
</package>
